--- a/New_Bayes.ipynb
+++ b/New_Bayes.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4be0a7e5",
+   "id": "52c6f27d",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3e996bd6",
+   "id": "bee1be1c",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5002fa7c",
+   "id": "6d868cad",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "50ad46e7",
+   "id": "76ab4618",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2938478d",
+   "id": "5b9708f3",
    "metadata": {},
    "outputs": [
     {
@@ -517,22 +517,15 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0035859a",
+   "id": "fb81b043",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "feature_names = [col for col in df_train.columns if col.startswith('s') or col.startswith('sensor')]\n",
-    "\n",
-    "X_train = df_train[feature_names]\n",
-    "y_train = df_train.iloc[:,-1]\n",
-    "X_test = df_test_max[feature_names]\n",
-    "y_test = df_test_RUL.iloc[:,-1]\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "496edee4",
+   "id": "d6c32a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd9d9eef",
+   "id": "adad6f7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8a340eee",
+   "id": "2e713427",
    "metadata": {},
    "outputs": [
     {
@@ -661,9 +654,69 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "e85a1d18",
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "449c4d93",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " lstm (LSTM)                 (None, 1, 100)            46000     \n",
+      "                                                                 \n",
+      " batch_normalization (Batch  (None, 1, 100)            400       \n",
+      " Normalization)                                                  \n",
+      "                                                                 \n",
+      " lstm_1 (LSTM)               (None, 1, 50)             30200     \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 1, 50)             0         \n",
+      "                                                                 \n",
+      " lstm_2 (LSTM)               (None, 1, 10)             2440      \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 1, 10)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1, 100)            1100      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1, 1)              101       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 80241 (313.44 KB)\n",
+      "Trainable params: 80041 (312.66 KB)\n",
+      "Non-trainable params: 200 (800.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "2d0cea22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "724d816e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-squared error: -295.03%\n",
+      "Root Mean Squared Error: 105.98\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
