--- a/K_means_regression.ipynb
+++ b/K_means_regression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "63b0a5d3",
+   "id": "023dfa29",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "dfcc47c7",
+   "id": "16a25568",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "13f00e54",
+   "id": "88109e62",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "5a384405",
+   "id": "5746c39e",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "d4bb1741",
+   "id": "971fac77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "d8c28010",
+   "id": "1ee5ec84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "ffebff25",
+   "id": "ed63f104",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "e673ddff",
+   "id": "9be2beaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113b024a",
+   "id": "4de6a54a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "d15c8863",
+   "id": "7566cb04",
    "metadata": {
     "scrolled": true
    },
@@ -561,8 +561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "38cb64a6",
+   "execution_count": 148,
+   "id": "a1d5ba5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,45 +573,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "df11545d",
-   "metadata": {},
+   "execution_count": 153,
+   "id": "dff21561",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[158.         114.          72.88888889  92.22222222 135.55555556\n",
-      " 138.44444444 132.22222222 103.22222222 136.11111111 137.88888889\n",
-      "  83.66666667 113.33333333  97.11111111 110.11111111 163.11111111\n",
-      " 111.          52.66666667  64.33333333 126.66666667  20.22222222\n",
-      "  73.77777778 147.33333333 142.22222222  24.33333333 172.22222222\n",
-      " 117.22222222 135.11111111 125.22222222 124.66666667  93.77777778\n",
-      "  11.55555556  59.11111111 115.77777778   5.33333333   7.55555556\n",
-      "  30.          66.          46.55555556 139.33333333  33.22222222\n",
-      "  61.66666667  17.11111111  72.         115.66666667  74.44444444\n",
-      "  65.22222222 142.88888889 129.          15.11111111 130.66666667\n",
-      " 141.11111111  31.44444444  37.11111111 175.11111111 161.11111111\n",
-      "  16.88888889 112.22222222  44.88888889 161.         107.66666667\n",
-      "  44.          51.66666667  74.          49.11111111 180.44444444\n",
-      "  15.22222222 146.33333333  18.         139.55555556 137.55555556\n",
-      " 179.44444444  74.55555556 167.55555556 134.33333333 175.55555556\n",
-      "  13.66666667  26.88888889 171.33333333 161.44444444  87.88888889\n",
-      "  11.22222222  10.11111111 178.77777778  47.         157.77777778\n",
-      " 101.66666667 118.11111111 160.66666667 116.33333333  46.88888889\n",
-      "  29.77777778  24.55555556  51.44444444  56.44444444 152.88888889\n",
-      " 169.         129.11111111  98.55555556 161.          15.11111111]\n"
+      "R-squared error: 41.13%\n",
+      "Root Mean Squared Error: 31.88\n"
      ]
     }
    ],
    "source": [
-    "print(y_predictions)"
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "model_performance = pd.DataFrame(columns=['r-Squared','RMSE','total time'])\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import make_scorer, accuracy_score\n",
+    "\n",
+    "import sklearn\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "# from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "model_performance = pd.DataFrame(columns=['R2','RMSE'])\n",
+    "\n",
+    "\n",
+    "def R_squared(y_true, y_pred):\n",
+    "    SS_res =  K.sum(K.square(y_true - y_pred))\n",
+    "    SS_tot = K.sum(K.square(y_true - K.mean(y_true)))\n",
+    "    return 1 - SS_res/(SS_tot + K.epsilon())\n",
+    "model_performance.loc['kNN'] = [model.score(X_test,y_test), \n",
+    "                                   mean_squared_error(y_test,y_predictions,squared=False)]\n",
+    "\n",
+    "print('R-squared error: '+ \"{:.2%}\".format(model.score(X_test,y_test)))\n",
+    "print('Root Mean Squared Error: '+ \"{:.2f}\".format(mean_squared_error(y_test,y_predictions,squared=False)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "f6e3deb9",
+   "id": "e34db9ea",
    "metadata": {
     "scrolled": false
    },
@@ -649,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5137b27a",
+   "id": "c2cfc7ff",
    "metadata": {},
    "outputs": [],
    "source": []
