Changed KNNR to scaled dataset

--- a/Draft LTSM.ipynb
+++ b/Draft LTSM.ipynb
@@ -69,15 +69,14 @@
     "y_train = df_train.iloc[:,-1]\n",
     "X_test = df_test_max[feature_names]\n",
     "y_test = df_test_RUL.iloc[:,-1]\n",
+    "\n",
     "sc = MinMaxScaler()\n",
     "X_train = sc.fit_transform(X_train)\n",
     "X_test = sc.transform(X_test)\n",
     "\n",
     "X_train_s, X_val, y_train_s, y_val = train_test_split(X_train, y_train, test_size=0.1)\n",
     "\n",
-    "#The LSTM input layer must be 3D.\n",
-    "#The meaning of the 3 input dimensions are: samples, time steps, and features.\n",
-    "#reshape input data\n",
+    "\n",
     "X_train_reshaped = X_train_s.reshape(X_train_s.shape[0], 1, X_train_s.shape[1])\n",
     "X_val_reshaped = X_val.reshape(X_val.shape[0], 1, X_val.shape[1])\n",
     "X_test_reshaped = X_test.reshape(X_test.shape[0], 1, X_test.shape[1])\n",
@@ -123,9 +122,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "icm_kernel",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "icm_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -137,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
